# [#20372] components options (IE 8 test)
# [#20793] FTP installation features not working as expected
# Fix checkall toggle bug in User Manager caused by [#20372] 
# [#20862] Show Profile in contact not working
# Sample data fixes for contact (Elin Waring)
# [#20937] non validated fields when creating banners
# [#21079] weblink - contacts - newsfeed - new item defaults to last order position

25-Jun-2010 Jean-Marie Simonet
$ Adding missing string, corrected a key
# Corrected path typos in both beez templates component.php

24-Jun-2010 Jean-Marie Simonet
[#21185] Weblink edit misses filter="safehtml"
[#21184] Correcting and normalizing custom html module edit display
[#21168] [image file] Missing image file in Hathor. Thanks Andrea
[#21157] Unable to filter template styles with number in it (eg: Beez5, beez_20) Thank CY Lee
[#21147] No articles in this category when display# changed to "All". Thanks Alain.
[#21151] com_content manifest in error or file missing. Thanks Boris and Bill.

24-Jun-2010 Jean-Marie Simonet
$ Completing string value
[#21173] Default ACL for editors and publishers is incorrect, also weblinks. Thanks Elin.
$ Correcting Web Link menu Item value (Front-end can't edit).

23-Jun-2010 Andrew Eddie
 # Fixed issue [#21146] Fix for broken JFormFieldCalendarTest.
 # Fixed issue [#20907] Making Joomla more compliant to PHP strict standard (Hannes Papenberg, Phil Snell).

23-Jun-2010 Jean-Marie Simonet
$ Added missing string
 [#20641] Email Cloaking Plugin doesn't output well formed code. Thanks Nicholas.

23-Jun-2010 Andrew Eddie
 # Fixed issue [#20617] installer doesn't allow . in database name (Rob Joyce, Troy Hall).
 # Partial fixes to [#20907] Making Joomla more compliant to PHP strict standard.
 
22-Jun-2010 Ian MacLennan
 # [#21129] JHtml::_('behavior.keepalive'); Does not work (Phil Snell)

22-Jun-2010 Christophe Demko
 # Reverting patch #17774.

22-Jun-2010 Andrew Eddie
 # Fixed issue [#20971] Add getCaching method (Klas Berlič1).