@@ -60,6 +60,7 @@ JSHOW="Show"
 JSITE="Site"
 JSUBMIT="Submit"
 JTRASHED="Trashed"
+JTRASH="Trash"
 JTRUE="True"
 JUNPUBLISHED="Unpublished"
 JYEAR="Year"
@@ -336,3 +337,21 @@ PHPMAILER_ENCODING="Unknown encoding:"
 PHPMAILER_SIGNING_ERROR="Signing error:"
 
 MESSAGE="Message"
+JSEARCH_FILTER_LABEL="Filter"
+JSEARCH_FILTER_CLEAR="Clear"
+JSEARCH_FILTER_SUBMIT="Search"
+JOPTION_SELECT_ACCESS="- Select Access -"
+JOPTION_SELECT_PUBLISHED="- Select State -"
+JOPTION_SELECT_CATEGORY="- Select Category -"
+JGRID_HEADING_ACCESS="Access"
+JGRID_HEADING_CATEGORY="Category"
+JGRID_HEADING_ID="ID"
+JSEARCH_FILTER_LABEL="Filter"
+JSEARCH_FILTER_CLEAR="Clear"
+JSEARCH_FILTER_SUBMIT="Search"
+JOPTION_SELECT_ACCESS="- Select Access -"
+JOPTION_SELECT_PUBLISHED="- Select State -"
+JOPTION_SELECT_CATEGORY="- Select Category -"
+JGRID_HEADING_ACCESS="Access"
+JGRID_HEADING_CATEGORY="Category"
+JGRID_HEADING_ID="ID"
